--- a/src/css/CadastroUsuario.css
+++ b/src/css/CadastroUsuario.css
@@ -3,13 +3,13 @@
   margin: 50px auto;
   padding: 30px;
   background-color: white;
-  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.5);
   border-radius: 12px;
 }
 
 .formulario-container h2 {
   text-align: center;
-  color: #6c2bd9;
+  color: #3066BE;
   margin-bottom: 20px;
 }
 
@@ -26,8 +26,15 @@
   padding: 10px;
   margin-bottom: 16px;
   border-radius: 8px;
-  border: 1px solid #ccc;
+  border: 1px solid #507fca;
   font-size: 16px;
+}
+
+.formulario-container input:focus,
+.formulario-container select:focus {
+  outline: none;
+  border-color: #3066BE;
+  box-shadow: 0 0 5px rgba(48, 102, 190, 0.5);
 }
 
 .formulario-botoes {
@@ -37,18 +44,19 @@
 }
 
 .btn-salvar {
-  background-color: #6c2bd9;
+  background-color: #3066BE;
   color: white;
   border: none;
   padding: 10px 20px;
   border-radius: 8px;
   font-size: 16px;
   cursor: pointer;
-  transition: background-color 0.3s;
+  transition: background-color 0.3s, transform 0.2s;
 }
 
 .btn-salvar:hover {
-  background-color: #5b21b6;
+  background-color: #507fca;
+  transform: scale(1.05);
 }
 
 .btn-cancelar {
@@ -59,8 +67,10 @@
   border-radius: 8px;
   font-size: 16px;
   cursor: pointer;
+  transition: background-color 0.3s, transform 0.2s;
 }
 
 .btn-cancelar:hover {
   background-color: #5a6268;
+  transform: scale(1.05);
 }
