--- a/src/css/Main.css
+++ b/src/css/Main.css
@@ -4,6 +4,14 @@
   box-sizing: border-box;
 }
 
+html, body {
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden !important;
+  height: 100%;
+  width: 100%;
+}
+
 .main-container {
   display: flex;
   height: calc(100vh - 64px);
