--- a/src/css/Stock.css
+++ b/src/css/Stock.css
@@ -49,6 +49,11 @@
   border-bottom: none;
 }
 
+.stock-table tr:hover td {
+  background-color: #f0f8ff;
+  transition: background-color 0.3s ease;
+}
+
 .edit-button {
   background-color: #3066BE;
   color: white;
@@ -69,10 +74,9 @@
 }
 
 .gear-btn {
-  position: absolute;
+  position: static;
   right: 10px;
   top: 50%;
-  transform: translateY(-50%);
   font-size: 18px;
   background: none;
   border: none;
@@ -84,17 +88,15 @@
 }
 
 .gear-btn:hover {
-  transform: translateY(-50%) scale(1.2);
+  transform: scale(1.2);
   color: #507fca;
 }
 
 .menu-opcoes {
   position: absolute;
-  top: 50%;
-  right: 7%;
-  transform: translateY(-50%);
   background-color: #f5f5f5;
   border: 1px solid #ddd;
+  border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
   z-index: 999;
   min-width: 120px;
@@ -184,4 +186,11 @@
 .botoes-confirmacao button {
   width: 100px;
   padding: 8px 0;
+}
+
+.stock-table td:last-child {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
 }
